🗒️ Fix Spacing for Event Details View

--- a/frontend/src/EventDetails/EventDetails.module.css
+++ b/frontend/src/EventDetails/EventDetails.module.css
@@ -3,6 +3,7 @@
   border-radius: 16px;
   padding: 0;
   width: 76vw;
+  min-width: 700px;
   height: 90vh;
   box-shadow: 0px 0px 16px hsla(0, 0%, 0%, 0.25);
 }
@@ -18,16 +19,39 @@
   display: flex;
   padding-left: 40px;
   padding-right: 40px;
+  height: 360px;
+}
+
+.name {
+  font-size: 48px;
+  font-weight: 750;
+  margin: 0px;
+  margin-bottom: 12px;
 }
 
 .details {
-  width: 50vw;
+  width: 40vw;
+  margin-top: 24px;
+  height: auto;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+}
+
+.icon {
+  width: 24px;
+}
+
+.locationLink {
+  margin-top: -2px;
 }
 
 .detail {
   display: flex;
   height: 24px;
   margin-bottom: 6px;
+  width: 40vw;
+  gap: 8px;
 }
 
 .detailInfo {
@@ -36,107 +60,26 @@
 
 .actions {
   display: flex;
-  height: 64px;
+  height: max-content;
+  gap: 12px;
+  margin-top: auto;
+  margin-bottom: 24px;
+}
+
+.actionIcon {
+  height: 48px;
+  width: 48px;
+  padding: 10px;
+  align-self: flex-end;
 }
 
 .description {
-  width: 50vw;
+  width: 40vw;
   margin-top: 24px;
+  padding-left: 24px;
+  height: auto;
 }
 
 .keywords {
   display: flex;
 }
-
-/* .back {
-  width: 50px;
-  height: 50px;
-  background-color: hsl(0, 0%, 85%);
-  border-radius: 25px;
-  margin: 16px;
-  margin-top: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 0px;
-}
-
-.back:hover {
-  background-color: hsl(0, 0%, 93%);
-  color: hsl(0, 0%, 18%);
-}
-
-.chevronIcon {
-  height: 32px;
-  width: 32px;
-  margin-left: -2px;
-}
-
-.main {
-  width: 40vw;
-  min-width: 400px;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 64px;
-  margin-bottom: 24px;
-  font-weight: bolder;
-}
-
-.plusIcon {
-  width: 50px;
-  height: 50px;
-  padding: 10px;
-}
-
-.photo {
-  border: 4px hsl(0, 0%, 85%) dashed;
-  height: 120px;
-  border-radius: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: hsl(0, 0%, 60%);
-  margin-bottom: 36px;
-}
-
-.cameraIcon {
-  height: 42px;
-  width: 42px;
-  margin: 12px;
-}
-
-.field {
-  margin: 0px;
-  margin-bottom: 12px;
-}
-
-.textInput {
-  background-color: hsl(0, 0%, 93%);
-  color: hsla(0, 0%, 0%, 30%);
-  height: fit-content;
-  min-height: 48px;
-  font-size: 18px;
-  border-radius: 8px;
-  padding: 14px;
-  margin-bottom: 34px;
-}
-
-.times {
-  display: flex;
-  justify-content: space-between;
-  gap: 12px;
-}
-
-.timeInput {
-  width: 23vh;
-}
-
-.description {
-  line-height: 160%;
-  padding-left: 20px;
-  padding-right: 20px;
-} */
